Updated testcases