@@ -1,103 +1,114 @@
 package com.alexvait.orderapi.controller;
 
+import com.alexvait.orderapi.dto.OrderDto;
 import com.alexvait.orderapi.dto.OrderDtoPagedList;
+import com.alexvait.orderapi.entity.Order;
+import com.alexvait.orderapi.entity.PaymentInformation;
 import com.alexvait.orderapi.mapper.OrderMapper;
 import com.alexvait.orderapi.service.OrderService;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Collections;
+import java.util.List;
+import java.util.stream.Collectors;
 
 import static com.alexvait.orderapi.testobjects.TestData.testOrder;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.collection.IsIterableContainingInAnyOrder.containsInAnyOrder;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.*;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @ExtendWith(MockitoExtension.class)
 @ActiveProfiles("testing")
 @DisplayName("Integration test for Order controller")
 class OrderControllerTest {
 
-    @Autowired
-    private MockMvc mockMvc;
+    @InjectMocks
+    OrderController orderController;
 
-    @MockBean
+    @Mock
     private OrderService orderService;
 
-    @MockBean
     private OrderMapper orderMapper;
 
-    @Test
-    @DisplayName("Test order get with defined pagination")
-    void testGetOrdersWithDefinedPagingParameters() throws Exception {
-
-        // arrange
-        when(orderService.getOrdersByCustomerId(anyLong(), any())).thenReturn(
-                new OrderDtoPagedList(
-                        Collections.singletonList(
-                                OrderMapper.INSTANCE.orderToOrderDto(testOrder)
-                        )
-                )
-        );
-
-        // act
-        mockMvc.perform(get(OrderController.BASE_CUSTOMER_URL + "/1")
-                .param("page", "5")
-                .param("size", "10")
-                .contentType(MediaType.APPLICATION_JSON)
-                .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andDo(print());
-
-        // assert
-        ArgumentCaptor<PageRequest> pageableCaptor = ArgumentCaptor.forClass(PageRequest.class);
-
-        verify(orderService).getOrdersByCustomerId(anyLong(), pageableCaptor.capture());
-        Pageable pageable = pageableCaptor.getValue();
-
-        assertEquals(5, pageable.getPageNumber());
-        assertEquals(10, pageable.getPageSize());
+    @BeforeEach
+    void setUp() {
+        orderMapper = OrderMapper.INSTANCE;
     }
 
     @Test
-    @DisplayName("Test order get with default pagination")
-    void testGetOrdersWithDefaultPagingParameters() throws Exception {
-
+    @DisplayName("Test getAllOrdersByCustomerId")
+    void testGetAllOrdersByCustomerId() {
         // arrange
-        when(orderService.getOrdersByCustomerId(anyLong(), any())).thenReturn(
-                new OrderDtoPagedList(
-                        Collections.singletonList(
-                                OrderMapper.INSTANCE.orderToOrderDto(testOrder)
-                        )
-                )
-        );
+        Order order2 = new Order("", 1L, 100L, new PaymentInformation(0, 0, 0));
+
+        List<OrderDto> ordersDto = List.of(orderMapper.orderToOrderDto(testOrder), orderMapper.orderToOrderDto(order2));
+        OrderDtoPagedList orderDtoPagedList = new OrderDtoPagedList(ordersDto);
+
+        when(orderService.getOrdersByCustomerId(anyLong(), any(PageRequest.class))).thenReturn(orderDtoPagedList);
 
         // act
-        mockMvc.perform(get(OrderController.BASE_CUSTOMER_URL + "/1")
-                .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andDo(print());
+        ResponseEntity<OrderDtoPagedList> ordersPagedList = orderController.getAllOrdersByCustomerId(1, 0, 2);
 
-        // assert
-        ArgumentCaptor<PageRequest> pageableCaptor = ArgumentCaptor.forClass(PageRequest.class);
+        //assert
+        verify(orderService, times(1)).getOrdersByCustomerId(anyLong(), any());
 
-        verify(orderService).getOrdersByCustomerId(anyLong(), pageableCaptor.capture());
-        Pageable pageable = pageableCaptor.getValue();
+        OrderDtoPagedList returnedOrders = ordersPagedList.getBody();
+        assertEquals(2, returnedOrders.getTotalElements());
 
-        assertEquals(0, pageable.getPageNumber());
-        assertEquals(5, pageable.getPageSize());
+        assertThat(
+                returnedOrders.stream().collect(Collectors.toList()),
+                containsInAnyOrder(ordersDto.toArray())
+        );
+    }
 
+    @Test
+    @DisplayName("Test getOrderById")
+    void testGetOrderById() {
+        // arrange
+        when(orderService.findById(anyLong())).thenReturn(testOrder);
+
+        // act
+        ResponseEntity<OrderDto> responseEntity = orderController.getOrderById(1);
+
+        //assert
+        assertEquals(orderMapper.orderToOrderDto(testOrder), responseEntity.getBody());
+        verify(orderService, times(1)).findById(anyLong());
+    }
+
+    @Test
+    @DisplayName("Test saveOrder")
+    void testSaveOrder() throws Exception {
+        // arrange
+        when(orderService.save(any(Order.class))).thenReturn(testOrder);
+
+        // act
+        ResponseEntity<OrderDto> responseEntity = orderController.saveOrder(orderMapper.orderToOrderDto(testOrder));
+
+        //assert
+        assertEquals(orderMapper.orderToOrderDto(testOrder), responseEntity.getBody());
+        verify(orderService, times(1)).save(any());
+    }
+
+    @Test
+    @DisplayName("Test updateStatus")
+    void testUpdateStatus() throws Exception {
+        // arrange
+        when(orderService.changeStatus(anyLong(), anyString())).thenReturn(testOrder);
+
+        // act
+        ResponseEntity<OrderDto> responseEntity = orderController.updateStatus(1L, "x");
+
+        //assert
+        assertEquals(orderMapper.orderToOrderDto(testOrder), responseEntity.getBody());
+        verify(orderService, times(1)).changeStatus(anyLong(), anyString());
     }
 }
